feat: 쿠폰, 이벤트 api (고도화 기간 때 이어서 작업)