@@ -2,6 +2,7 @@ package org.swyp.dessertbee.store.event.service;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.swyp.dessertbee.common.entity.ImageType;
@@ -10,11 +11,14 @@ import org.swyp.dessertbee.store.event.dto.request.EventCreateRequest;
 import org.swyp.dessertbee.store.event.dto.response.EventResponse;
 import org.swyp.dessertbee.store.event.entity.Event;
 import org.swyp.dessertbee.store.event.repository.EventRepository;
+import org.swyp.dessertbee.store.store.repository.StoreRepository;
 
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional
@@ -22,22 +26,26 @@ public class EventService {
 
     private final EventRepository eventRepository;
     private final ImageService imageService;
+    private final StoreRepository storeRepository;
 
     /** 특정 가게의 이벤트 목록 조회 */
-    public List<EventResponse> getEventsByStore(Long storeId) {
+    public List<EventResponse> getEventsByStore(UUID storeUuid) {
+        Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
         List<Event> events = eventRepository.findByStoreIdAndDeletedAtIsNullOrderByStartDateAsc(storeId);
 
         return events.stream()
                 .map(event -> {
-                    List<String> images = imageService.getImagesByTypeAndId(ImageType.EVENT, event.getId());
+                    List<String> images = imageService.getImagesByTypeAndId(ImageType.EVENT, event.getEventId());
                     return EventResponse.fromEntity(event, images);
                 })
                 .collect(Collectors.toList());
     }
 
     /** 특정 가게의 특정 이벤트 조회 */
-    public EventResponse getEventByStore(Long storeId, Long eventId) {
-        Event event = eventRepository.findByIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
+    public EventResponse getEventByStore(UUID storeUuid, UUID eventUuid) {
+        Long eventId = eventRepository.findEventIdByEventUuid(eventUuid);
+        Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
+        Event event = eventRepository.findByEventIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 가게에 존재하지 않는 이벤트입니다."));
 
         List<String> images = imageService.getImagesByTypeAndId(ImageType.EVENT, eventId);
@@ -45,65 +53,69 @@ public class EventService {
         return EventResponse.fromEntity(event, images);
     }
 
-    /** 단일 이벤트 추가 */
-    public void addEvent(Long storeId, EventCreateRequest request, List<MultipartFile> files) {
-        boolean exists = eventRepository.existsByStoreIdAndTitleAndStartDateAndDeletedAtIsNull(storeId, request.getTitle(), request.getStartDate());
-
-        if (exists) {
-            throw new IllegalArgumentException("이미 등록된 이벤트입니다.");
-        }
-
-        Event event = eventRepository.save(Event.builder()
-                .storeId(storeId)
-                .title(request.getTitle())
-                .description(request.getDescription())
-                .startDate(request.getStartDate())
-                .endDate(request.getEndDate())
-                .build());
-
-        if (files != null && !files.isEmpty()) {
-            imageService.uploadAndSaveImages(files, ImageType.EVENT, event.getId(), "event/" + event.getId());
-        }
-    }
-
-    /** 여러 개의 이벤트 추가 */
-    public void addEvents(Long storeId, List<EventCreateRequest> eventRequests, Map<String, List<MultipartFile>> eventImageFiles) {
-        if (eventRequests == null || eventRequests.isEmpty()) return;
+    /** 이벤트 추가 */
+    @Transactional
+    public List<Event> addEvents(UUID storeUuid, List<EventCreateRequest> eventRequests, Map<Long, List<MultipartFile>> eventImageFiles) {
+        if (eventRequests == null || eventRequests.isEmpty()) return List.of();
+        Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
 
         List<Event> events = eventRequests.stream()
-                .map(request -> Event.builder()
-                        .storeId(storeId)
-                        .title(request.getTitle())
-                        .description(request.getDescription())
-                        .startDate(request.getStartDate())
-                        .endDate(request.getEndDate())
-                        .build())
-                .collect(Collectors.toList());
+                .map(request -> {
+                    Event event = Event.builder()
+                            .storeId(storeId)
+                            .title(request.getTitle())
+                            .description(request.getDescription())
+                            .startDate(request.getStartDate())
+                            .endDate(request.getEndDate())
+                            .build();
+                    return eventRepository.save(event);
+                })
+                .toList();
 
-        eventRepository.saveAll(events);
-
-        // 각 이벤트에 이미지 업로드
         events.forEach(event -> {
-            List<MultipartFile> files = eventImageFiles.get(event.getTitle());
-            if (files != null && !files.isEmpty()) {
-                imageService.uploadAndSaveImages(files, ImageType.EVENT, event.getId(), "event/" + event.getId());
+            Long eventId = eventRepository.findEventIdByEventUuid(event.getEventUuid());
+            log.info("🔍 저장된 이벤트 ID: " + eventId);
+            log.info("🔍 eventImageFiles 키 목록: " + eventImageFiles.keySet());
+
+            List<MultipartFile> files = eventImageFiles.get(eventId);
+            if (files == null || files.isEmpty()) {
+                log.info("⚠️ 이벤트 ID " + eventId + "에 대한 이미지가 없음");
+            } else {
+                log.info("✅ 이벤트 ID " + eventId + "에 대한 이미지 " + files.size() + "개 저장 중...");
+                imageService.uploadAndSaveImages(files, ImageType.EVENT, eventId, "event/" + eventId);
             }
         });
+
+
+        return events;
     }
 
     /** 이벤트 수정 */
-    public void updateEvent(Long storeId, Long eventId, EventCreateRequest request, List<Long> deleteImageIds, List<MultipartFile> files) {
-        Event event = eventRepository.findByIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
+    public void updateEvent(UUID storeUuid, UUID eventUuid, EventCreateRequest request, List<Long> deleteImageIds, List<MultipartFile> files) {
+        Long eventId = eventRepository.findEventIdByEventUuid(eventUuid);
+        Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
+
+        Event event = eventRepository.findByEventIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 이벤트입니다."));
 
         event.update(request.getTitle(), request.getDescription(), request.getStartDate(), request.getEndDate());
 
-        imageService.updatePartialImages(deleteImageIds, files, ImageType.EVENT, eventId, "event/" + eventId);
+        // 기존 이미지 삭제
+        if (deleteImageIds != null && !deleteImageIds.isEmpty()) {
+            imageService.deleteImagesByIds(deleteImageIds);
+        }
+
+        // 새로운 이미지 추가
+        if (files != null && !files.isEmpty()) {
+            imageService.uploadAndSaveImages(files, ImageType.EVENT, eventId, "event/" + eventId);
+        }
     }
 
     /** 이벤트 삭제 */
-    public void deleteEvent(Long storeId, Long eventId) {
-        Event event = eventRepository.findByIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
+    public void deleteEvent(UUID storeUuid, UUID eventUuid) {
+        Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
+        Long eventId = eventRepository.findEventIdByEventUuid(eventUuid);
+        Event event = eventRepository.findByEventIdAndStoreIdAndDeletedAtIsNull(eventId, storeId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 이벤트입니다."));
 
         event.softDelete();
